--- a/settings.gradle
+++ b/settings.gradle
@@ -1,9 +1,11 @@
+
 pluginManagement {
     repositories {
-        maven {
-            name = 'Fabric'
-            url = 'https://maven.fabricmc.net/'
-        }
         gradlePluginPortal()
+        maven { url 'https://maven.fabricmc.net/' }
+        maven { url 'https://jitpack.io' }
     }
 }
+
+rootProject.name = 'menu'
+include ":fabric"
